# deep-researcher

./: .dockerignore  .envrc  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  engine.py  flake.nix  pyproject.toml  research-mcp-wrapper  research.py  server.py
.github/workflows/: build-image.yml
scripts/: evaluate.py  relevance.py
